--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -14,15 +14,13 @@
 
 {% block content %}
   <div class="main-container" id="main-container">
-    <h3>Business</h3>
+    <h3>No Funny Business</h3>
     <p>
-        Calvin is a senior Electrical Engineering student at the University of Notre Dame, though much of his free time has been dedicated to programming.  If you'd like, you can take a look at his <a href="{{url_for('static', filename='resume/resume.pdf')}}">resume</a> or head to the <a href="/projects">projects</a> page to look at his technical experience.
+        Calvin is a senior Electrical Engineering student at the University of Notre Dame, though much of his free time has been dedicated to programming.  If you'd like, you can head to the <a href="/projects">projects</a> page to look at his technical experience.
     </p>
-
-    <h3>Recreation</h3>
     <p>
-        When he's not working, studying, reading, or tinkering, you can find Cal on the golf course shanking
-        balls into beverage carts.  Weather permitting, it's also a fair bet you'll catch him swimming in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain" target="_blank">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
+        When he's not tinkering, you can find Cal shanking
+        golf balls into beverage carts.  Weather permitting, it's also likely you'll catch him swimming in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain" target="_blank">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
     </p>
   </div> <!-- /.main-container -->
 {% endblock %}
