--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -18,7 +18,7 @@
     <div class="form-wrap">
         <form action="/contact" method="post">
             <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" placeholder="Future Boss" required class="single-line-input">
+            <input type="text" id="name" name="name" placeholder="Great Gal/Guy" required class="single-line-input">
 
             <label for="email">Your E-mail:</label>
             <input type="email" id="email" name="email" required class="single-line-input">
@@ -27,7 +27,7 @@
             <input type="tel" id="number" name="number" class="single-line-input">
 
             <label for="message">Words of Wisdom:</label>
-            <textarea type="textarea" id="message" name="message" placeholder="I was sitting here letting my cat walk on the keyboard (per my usual web browsing habits) when I came accross this lacklustre expos&eacute;. Shame on you for further bloating the internet!" size="15" required class="multi-line-input"></textarea>
+            <textarea type="textarea" id="message" name="message" placeholder="I was mashing my face against my keyboard when I came across this lacklustre expos&eacute;..." size="15" required class="multi-line-input"></textarea>
 
             <input type="submit" id="submit" class-"submit-button">
         </form>
