--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -34,14 +34,14 @@
         This past summer Calvin interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries, and MTS provides a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, that controls several of these testing rigs.
     </p>
     <p>
-        Cal was a member the automated test team that worked with TestSuite, and he spent the summer implementing UI drivers and writing automated UI test cases in C#.  It was rewarding converting tedious manual tests (that usually get squeezed into the end of a release) into automated processes that could be run every night.
+        Cal was a member of the automated test team that worked with TestSuite, and he implemented UI drivers and wrote automated UI test cases in C#.
     </p>
 
     <h3 id="gentex">Gentex Corporation</h3>
     <h4><em>Firmware Dev</em>: C</h4>
     <h4><em>Integration Testing</em>: Ruby</h4>
     <p>
-        The summer of 2012 Calvin interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a> in Zeeland, Michigan.  Gentex manufactures car mirrors, and Cal wrote commands to retrieve and send diagnostic information to and from the mirror.
+        The summer of 2012 Calvin interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a>, a global car mirror manufacturer in Zeeland, Michigan.  Cal wrote diagnostic commands to communicate and send commands to the mirror.
     </p>
     <p>
         Calvin also wrote integration tests to ensure the car mirror's core features were behaving appropriately.  He tested features like automatic dimming and displaying accurate compass and GPS information.
@@ -50,7 +50,7 @@
     <h3 id="this_site">calbelden.com</h3>
     <h4>HTML, CSS, Python</h4>
     <p>
-        calbelden.com started up earlier this summer as a means to learn html and css; the website also served as an opportunity to keep Calvin's Python skills fresh.  The original hope was to use the knowledge learned here and apply it to a food ordering app geared towards Notre Dame's dorm restaurants, which are all student owned/runned.  The food project will likely begin sometime this fall!
+        calbelden.com started earlier this summer as a means to learn html and css; the website also served as an opportunity to keep Calvin's Python skills fresh.  The original hope was to use the knowledge learned here and apply it to a food ordering app geared towards Notre Dame's dorm restaurants, which are all student owned/runned.  Work for the ordering service will likely begin sometime this fall!
     </p>
   </div> <!-- /.main-container -->
 {% endblock %}
