--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -13,14 +13,21 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container" id="main-container">
-    <h3>No Funny Business</h3>
+<div class="selfie-wrap">
+    <img class="selfie" src="static/custom/selfie.jpg">
+</div>
+
+<div class="main-container">
+    <h3>Go time</h3>
     <p>
-        Calvin is a senior Electrical Engineering student at the University of Notre Dame, though much of his free time has been dedicated to programming.  If you'd like, you can head to the <a href="/projects">projects</a> page to look at his technical experience.
+        I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to programming.  You can head to the <a href="/projects">projects</a> page to look at my technical experience.
     </p>
+</div>
+
+<div class="main-container">
+    <h3>Down time</h3>
     <p>
-        When he's not tinkering, you can find Cal shanking
-        golf balls into beverage carts.  Weather permitting, it's also likely you'll catch him swimming in a nearby lake (<a href="http://en.wikipedia.org/wiki/Minnesota#Geology_and_terrain" target="_blank">Fun Fact</a>: In Minnesota, there are more than 11,000 to choose from).
+        When I'm not tinkering, you can find me shanking golf balls into beverage carts.  Other pastimes include but are not limited to: reading, swimming (sinking), redditing, exercising, and getting lost in a good movie.
     </p>
-  </div> <!-- /.main-container -->
+</div>
 {% endblock %}
