--- a/mysite/templates/about_site.html
+++ b/mysite/templates/about_site.html
@@ -22,7 +22,7 @@
         All of the pages on this site are rendered using <a href="http://jinja.pocoo.org/docs/" target="_blank">Jinja2</a> templates and the <a href="http://twitter.github.io/bootstrap/" target="_blank">Twitter Boostrap</a> toolkit, which have both been really easy to use.  This site is hosted on <a href="http://heroku.com" target="_blank">Heroku</a> using their free tier (which has been great!).
     </p>
     <p>
-        For those who are interested, the source can be found <a href="https://github.com/cbelden/MySite" target="_blank">here</a>.
+        For those who are interested, the source code for this site can be found <a href="https://github.com/cbelden/MySite" target="_blank">here</a>.
     </p>
   </div> <!-- /.main-container -->
 {% endblock %}
