--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -16,7 +16,7 @@
   <div class="main-container" id="main-container">
     <h3>Thanks for stopping by!</h3>
     <p>
-        Greetings; you've stumbled upon Calvin Belden's latest project.  Feel free to explore his expos&eacute;  and leave a comment!
+        Greetings; you've stumbled upon my personal website.  Feel free to explore the expos&eacute; and, please, leave a comment! I'd love to hear your feedback.
     </p>
   </div> <!-- ./main-container -->
 {% endblock %}
