--- a/mysite/templates/thank_you.html
+++ b/mysite/templates/thank_you.html
@@ -16,7 +16,7 @@
   <div class="main-container" id="main-container">
     <h3>Thank you {{ name }}!</h3>
     <p>
-        Your message was successfully sent; Calvin will get back to you shortly.
+        Your message was successfully sent; I will get back to you shortly.
     </p>
     </div> <!-- ./form-wrap -->
   </div> <!-- ./main-container -->
