--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -30,27 +30,33 @@
   <div class="main-container" id="main-container">
     <h3 id="mts">MTS Systems Corporation</h3>
     <h4><em>Automated UI Testing</em>: C#</h4>
+    <hr/>
     <p>
-        This past summer Calvin interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces test devices for a variety of fields including the materials, automotive, and aerospace industries, and MTS provides a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, that controls several of these testing rigs.
+        This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces testing devices for a variety of fields, and a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, controls several of these devices.
     </p>
     <p>
-        Cal was a member of the automated test team that worked with TestSuite, and he implemented UI drivers and wrote automated UI test cases in C#.
-    </p>
+        I was a member of the automated test team that worked with TestSuite, and I focused on developing the coded UI test framework.  The framework will drive nightly-run acceptance tests that will help minimize the risk of expensive bugs.  There is a large amount of business-logic embedded within TestSuite's UI, so it was imperative to get the UI testing framework functional very quickly; frameworks prior to this solely tested the internals of the application.
+  </div> <!-- /.main-container -->
 
+  <div class="main-container" id="main-container">
     <h3 id="gentex">Gentex Corporation</h3>
     <h4><em>Firmware Dev</em>: C</h4>
     <h4><em>Integration Testing</em>: Ruby</h4>
+    <hr/>
     <p>
-        The summer of 2012 Calvin interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a>, a global car mirror manufacturer in Zeeland, Michigan.  Cal wrote diagnostic commands to communicate and send commands to the mirror.
+        The summer of 2012 I interned as a software engineer at <a href="http://www.gentex.com/" target="_blank">Gentex</a>, a global car mirror manufacturer in Zeeland, Michigan.  I wrote diagnostic commands to communicate and send commands to the mirror.
     </p>
     <p>
-        Calvin also wrote integration tests to ensure the car mirror's core features were behaving appropriately.  He tested features like automatic dimming and displaying accurate compass and GPS information.
+        In addition, I also wrote integration tests to ensure the car mirror's core features were behaving appropriately.  I tested features like automatic dimming and displaying accurate compass and GPS information.
     </p>
+  </div> <!-- /.main-container -->
 
+  <div class="main-container" id="main-container">
     <h3 id="this_site">calbelden.com</h3>
     <h4>HTML, CSS, Python</h4>
+    <hr/>
     <p>
-        calbelden.com started earlier this summer as a means to learn html and css; the website also served as an opportunity to keep Calvin's Python skills fresh.  The original hope was to use the knowledge learned here and apply it to a food ordering app geared towards Notre Dame's dorm restaurants, which are all student owned/runned.  Work for the ordering service will likely begin sometime this fall!
+        calbelden.com started earlier this summer as a means to learn html and css; the website also served as an opportunity to keep my Python skills fresh.  The original hope was to use the knowledge learned here and apply it to a food ordering app geared towards Notre Dame's dorm restaurants, which are all student owned/runned.  Work for the ordering service will likely begin sometime this fall!
     </p>
   </div> <!-- /.main-container -->
 {% endblock %}
