--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -15,13 +15,19 @@
 {% block content %}
   <div class="main-container" id="main-container">
     <h3>Send me a message!</h3>
+    <p>
+        Fill out the form below, or e-mail me at calbelden@outlook.com
+    <p>
     <div class="form-wrap">
         <form action="/contact" method="post">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" placeholder="Great Gal/Guy" required class="single-line-input">
 
             <label for="email">Your E-mail:</label>
-            <input type="email" id="email" name="email" required class="single-line-input">
+            <input type="email" id="email" name="email" placeholder="IAmA@placeholder.com" required class="single-line-input">
+
+            <label for="company">Your Company (optional!):</label>
+            <input type="text" id="company" name="company" placeholder="Fantastic Institution" required class="single-line-input">
 
             <label for="number">Your Number (optional!):</label>
             <input type="tel" id="number" name="number" class="single-line-input">
