--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -35,7 +35,7 @@
         This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces testing devices for a variety of fields, and a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, controls several of these devices.
     </p>
     <p>
-        I was a member of the automated test team that worked with TestSuite, and I focused on developing the coded UI test framework.  The framework will drive nightly-run acceptance tests that will help minimize the risk of expensive bugs.  There is a large amount of business-logic embedded within TestSuite's UI, so it was imperative to get the UI testing framework functional very quickly; frameworks prior to this solely tested the internals of the application.
+        I was a member of the automated test team that worked with TestSuite, and I focused on developing the coded UI test framework.  The framework will drive nightly-run acceptance tests that will help minimize the risk of expensive bugs.  There is a large amount of business-logic embedded within TestSuite's UI, so it was imperative to get the UI testing framework functional very quickly; automated testing prior to this focused solely on the internals of the application.
   </div> <!-- /.main-container -->
 
   <div class="main-container" id="main-container">
@@ -56,7 +56,7 @@
     <h4>HTML, CSS, Python</h4>
     <hr/>
     <p>
-        calbelden.com started earlier this summer as a means to learn html and css; the website also served as an opportunity to keep my Python skills fresh.  The original hope was to use the knowledge learned here and apply it to a food ordering app geared towards Notre Dame's dorm restaurants, which are all student owned/runned.  Work for the ordering service will likely begin sometime this fall!
+        calbelden.com started earlier this summer as a means to learn HTML and CSS; the website also served as an opportunity to keep my Python skills fresh.  The original hope was to use the knowledge learned here and apply it to a food ordering app geared towards Notre Dame's dorm restaurants, which are all student owned/runned.  Work for the ordering service will likely begin sometime this fall!
     </p>
   </div> <!-- /.main-container -->
 {% endblock %}
