--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -73,5 +73,18 @@
 
   <!-- Custom js for transitions -->
   <script src="{{url_for('static', filename='custom/custom.js')}}"></script>
+
+  <!-- Google Analytics snippet -->
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-43010432-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 </body>
 </html>
