--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -18,6 +18,7 @@
     <p>
         Fill out the form below, or e-mail me at calbelden@outlook.com
     <p>
+    <hr>
     <div class="form-wrap">
         <form action="/contact" method="post">
             <label for="name">Your Name:</label>
@@ -32,8 +33,8 @@
             <label for="number">Your Number (optional!):</label>
             <input type="tel" id="number" name="number" class="single-line-input">
 
-            <label for="message">Words of Wisdom:</label>
-            <textarea type="textarea" id="message" name="message" placeholder="I was mashing my face against my keyboard when I came across this lacklustre expos&eacute;..." size="15" required class="multi-line-input"></textarea>
+            <label for="message">Message:</label>
+            <textarea type="textarea" id="message" name="message" placeholder="Words of Wisdom" size="15" required class="multi-line-input"></textarea>
 
             <input type="submit" id="submit" class-"submit-button">
         </form>
