--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -15,18 +15,21 @@
 {% block content %}
 
 <div class="main-container">
+    <div class="about-container">
+        <h3>Go time</h3>
+        <p>
+            I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to programming.  You can head to the <a href="/projects">projects</a> page to look at my technical experience.
+        </p>
+    </div>
     <div class="selfie-wrap">
         <img class="selfie" src="static/custom/selfie.jpg">
     </div>
 
-    <h3>Go time</h3>
-    <p>
-        I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to programming.  You can head to the <a href="/projects">projects</a> page to look at my technical experience.
-    </p>
-
+    <div class="spacer"></div>
+    
     <h3>Down time</h3>
     <p>
         When I'm not tinkering, you can find me shanking golf balls into beverage carts.  Other pastimes include but are not limited to: reading, swimming (sinking), redditing, exercising, and getting lost in a good movie.
     </p>
-</div>
+</div> <!-- .main-container -->
 {% endblock %}
