--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -9,7 +9,7 @@
   <link href="{{url_for('static', filename='assets/css/bootstrap.css')}}" rel="stylesheet">
   <link href="{{url_for('static', filename='assets/css/bootstrap-responsive.css')}}" rel="stylesheet">
   <link href="{{url_for('static', filename='custom/custom.css')}}" rel="stylesheet">
-  <link href="http://fonts.googleapis.com/css?family=Oxygen|Sintony" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Expletus%20Sans" rel="stylesheet" type="text/css">
   <style type="text/css">{% block style %}{% endblock %}</style>
 
   <!-- Google Analytics snippet -->
@@ -41,10 +41,10 @@
             <div class="nav-collapse">
               <ul class="nav">
                 <li {%block home_nav%}{%endblock%}><a href="/"><i class="icon-home icon-white"></i> Home</a></li>
-                <li {%block about_nav%}{%endblock%}><a href="/about">about</a></li>
-                <li {%block projects_nav%}{%endblock%}><a href="/projects">projects</a></li>
-                <li {%block contact_nav%}{%endblock%}><a href="/contact">contact</a></li>
-                <li {%block about_site_nav%}{%endblock%}><a href="/about_site">this site</a></li>
+                <li {%block about_nav%}{%endblock%}><a href="/about"><i class="icon-user icon-white"></i> about</a></li>
+                <li {%block projects_nav%}{%endblock%}><a href="/projects"><i class="icon-edit icon-white"></i> projects</a></li>
+                <li {%block contact_nav%}{%endblock%}><a href="/contact"><i class="icon-comment icon-white"></i> contact</a></li>
+                <li {%block about_site_nav%}{%endblock%}><a href="/about_site"><i class="icon-asterisk icon-white"></i> this site</a></li>
                 {%block pnf_nav%}{%endblock%}
               </ul>
             </div><!-- /.nav-collapse -->
@@ -72,7 +72,7 @@
 
       <!-- FOOTER -->
       <div class="footer">
-        <h3>&copy; Calvin Belden. <a href="/contact">Contact me.</a></h3>
+        <h3>&copy; Calvin Belden. <a href="/contact">Contact.</a></h3>
       </div>
 
   </div> <!-- ./wrap -->
