changed about site wording. added hope section to about. updated contact form.

--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -31,5 +31,10 @@
     <p>
         When I'm not tinkering, you can find me shanking golf balls into beverage carts.  Other pastimes include but are not limited to: reading, swimming (sinking), redditing, exercising, and getting lost in a good movie.
     </p>
+    
+    <h3>Hopes</h3>
+    <p>
+        My immediate plans are to work in industry and absorb as much information as possible; I love learning new technologies, and I'm continuously working to extend my skillset.  In time, my goal is to own a product/project that benefits customers on a global scale!
+    </p>
 </div> <!-- .main-container -->
 {% endblock %}
