--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -15,6 +15,8 @@
 {% block content %}
   <div class="main-container" id="main-container">
     <h3>Send me a message!</h3>
+    <p>Or send me an email: calbelden[at]outlook.com</p>
+    <hr>
     <div class="form-wrap">
         <form action="/contact" method="post">
             <label for="name">Your Name:</label>
