--- a/mysite/templates/work.html
+++ b/mysite/templates/work.html
@@ -35,10 +35,10 @@
         This past summer I interned as a software test engineer at <a href="http://www.mts.com/en/index.htm" target="_blank">MTS Systems</a> in Eden Prairie, MN.  MTS produces testing devices for a variety of fields, and a rich Windows application, <a href="http://www.mts.com/testsuite/" target="_blank">TestSuite</a>, controls several of these devices.
     </p>
     <p>
-        I was a member of the automated test team that worked with TestSuite, and I focused on developing the coded UI test framework.  The framework will drive nightly-run acceptance tests that will help minimize the risk of expensive bugs.  
+        I was a member of the automated test team that worked with TestSuite, and I focused on developing the coded UI test framework.  The framework will drive nightly-run acceptance tests to help minimize the risk of expensive bugs.  
     </p>
     <p>
-        I also participated in the annual Hackathon and built a POC, web-based, intelligent phone service for customer feedback submissions.  The service allowed customers to query the status of existing feedback items, create new items, and receive updates: all over the phone.
+        I also participated in the annual Hackathon and built a web-based, intelligent phone service for customer feedback submissions.  The service allowed customers to query the status of existing feedback items, create new items, and receive updates: all over the phone.
     </p>
   </div> <!-- /.main-container -->
 
