--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -72,7 +72,11 @@
 
       <!-- FOOTER -->
       <div class="footer">
-        <h3>&copy; Calvin Belden. <a href="/contact">Contact.</a></h3>
+        <h3>
+          &copy; Calvin Belden.
+          <a href="/contact">Contact.</a>
+          <a href="http://www.linkedin.com/pub/calvin-belden/7a/7b/34">LinkedIn.</a>
+        </h3>
       </div>
 
   </div> <!-- ./wrap -->
