--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -29,7 +29,7 @@
             <input type="text" id="company" name="company" placeholder="Fantastic Institution" required class="single-line-input">
 
             <label for="number">Your Number (optional!):</label>
-            <input type="tel" id="number" name="number" class="single-line-input">
+            <input type="tel" id="number" name="number" placeholder="Sorry in advance for any butt dials" class="single-line-input">
 
             <label for="message">Message:</label>
             <textarea type="textarea" id="message" name="message" placeholder="Words of Wisdom" size="15" required class="multi-line-input"></textarea>
