edited about page

--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -29,12 +29,12 @@
     
     <h3>Hopes</h3>
     <p>
-        My immediate plans are to work in industry and absorb as much information as possible; I love learning, and I'm always working to expand my skillset.  One day, my dream is to own a subtle, elegant product that revolutionizes an existing, outdated technology; I want to make the world a better place!
+        My immediate plans are to work in industry and absorb as much information as possible; I love learning, and I'm always working to expand my skillset.  I want to improve and automate routine tasks so people can stop sweating the small stuff and worry about what matters.
     </p>
     
     <h3>Down time</h3>
     <p>
-        When I'm not tinkering, you can find me shanking golf balls into beverage carts.  Other pastimes include but are not limited to: reading, swimming (sinking), redditing, exercising, and getting lost in a good movie.
+        When I'm not tinkering, you can find me shanking golf balls into beverage carts.  Other pastimes include but are not limited to: reading, swimming (sinking), redditing, exercising, and netflixing.
     </p>
 </div> <!-- .main-container -->
 {% endblock %}
