edited about page

--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -18,7 +18,7 @@
     <div class="about-container">
         <h3>Go time</h3>
         <p>
-            I am a senior Electrical Engineering student at the University of Notre Dame, though much of my free time has been dedicated to programming.  You can head to the <a href="/projects">projects</a> page to look at my technical experience.
+            I am a senior Electrical Engineering student at the University of Notre Dame with a fascination for computers, software, and the limitless possibilities they present.
         </p>
     </div>
     <div class="selfie-wrap">
@@ -29,12 +29,12 @@
     
     <h3>Hopes</h3>
     <p>
-        My immediate plans are to work in industry and absorb as much information as possible; I love learning, and I'm always working to expand my skillset.  I want to improve and automate routine tasks so people can stop sweating the small stuff and worry about what matters.
+        My immediate plans are to join the workforce and absorb as much information as possible; I love digging into new technologies, and I look forward to continuing that education in industry.  If you'd like, you can head to the <a href="/projects">projects</a> page to see some of my work.
     </p>
     
     <h3>Down time</h3>
     <p>
-        When I'm not tinkering, you can find me shanking golf balls into beverage carts.  Other pastimes include but are not limited to: reading, swimming (sinking), redditing, exercising, and netflixing.
+        When I'm not tinkering, you can find me shanking golf balls into beverage carts.  Other pastimes include but are not limited to: reading, frisbee-tossing, redditing, exercising, and netflixing.
     </p>
 </div> <!-- .main-container -->
 {% endblock %}
