--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -26,7 +26,7 @@
             <input type="email" id="email" name="email" placeholder="IAmA@placeholder.com" required class="single-line-input">
 
             <label for="company">Your Company (optional!):</label>
-            <input type="text" id="company" name="company" placeholder="Fantastic Institution" required class="single-line-input">
+            <input type="text" id="company" name="company" placeholder="Fantastic Institution" class="single-line-input">
 
             <label for="number">Your Number (optional!):</label>
             <input type="tel" id="number" name="number" placeholder="Sorry in advance for any butt dials" class="single-line-input">
