--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -13,10 +13,19 @@
 {% endblock %}
 
 {% block content %}
-  <div class="main-container" id="main-container">
+  <div class="main-container" id="welcome">
     <h3>Thanks for stopping by!</h3>
     <p>
         Greetings; you've stumbled upon my personal website.  Feel free to explore the expos&eacute; and, please, leave a comment! I'd love to hear your feedback.
     </p>
   </div> <!-- ./main-container -->
+
+  <div class="main-container">
+    <h3>Blog Preview</h3>
+    <hr/>
+    <p>
+        Currently under progres(ql). Check back later for information that is in all likelihood irrelevant to you!
+    </p>
+  </div> <!-- ./main-container -->
+
 {% endblock %}
